Fix source test Java compatibility