@@ -2,8 +2,9 @@ package com.sktpj.npcbrain;
 
 import org.junit.Test;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
@@ -47,6 +48,6 @@ public class DungeonAreaNeutralitySourceTest {
     }
 
     private static String read(String path) throws Exception {
-        return Files.readString(Path.of(path));
+        return new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
     }
 }
